--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,5 +1,5 @@
 @import './variables.scss';
-@import "~bootstrap/scss/bootstrap";
+@import "~bootstrap/scss/bootstrap.scss";
 
 body {
     background-color: white;
