--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -1,15 +1,83 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello LoginController!{% endblock %}
+{% block title %}Log In{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ encore_entry_link_tags('app_login') }}
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('app_login') }}
+{% endblock %}
+
+{% block header %}{% endblock %}
 
 {% block body %}
-    <form action="{{ path('app_login') }}" method="post">
-        <label for="username">Email:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}">
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="_password">
+    <section class="h-100">
+        <div class="container h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-xl-10">
+                    <div class="card rounded-3 text-black">
+                        <div class="row g-0">
+                            <div class="col-lg-6">
+                                <div class="card-body p-md-5 mx-md-4">
 
-        <button type="submit">Log In</button>
-    </form>
+                                    <div class="text-center">
+                                        <img src="{{ asset('images/logo.svg') }}"
+                                             style="width: 185px;" alt="logo">
+                                    </div>
+
+                                    <form action="{{ path('app_login') }}">
+                                        <p class="text-center fw-bold mb-4">Log in to your account</p>
+
+                                        <div class="form-outline mb-4">
+                                            <label class="form-label" for="username">Email</label>
+                                            <input type="email" class="form-control" id="username" name="_username"
+                                                   value="{{ last_username }}"/>
+                                        </div>
+
+                                        <div class="form-outline mb-4">
+                                            <label class="form-label" for="password">Password</label>
+                                            <input type="password" id="password" class="form-control" name="_password"/>
+                                        </div>
+
+                                        {% if error %}
+                                            <div class="alert alert-danger" role="alert">
+                                                {{ error.messageKey|trans(error.messageData, 'security') }}
+                                            </div>
+                                        {% endif %}
+
+                                        <div class="text-center pt-1 mb-5 pb-1">
+                                            <input class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
+                                                   type="submit" value="Log In">
+                                        </div>
+
+                                        <div class="d-flex align-items-center justify-content-center pb-4">
+                                            <p class="mb-0 me-2">Don't have an account?</p>
+                                            <a class="text-primary" href="{{ path('app_register') }}">Create new</a>
+                                        </div>
+
+                                    </form>
+
+                                </div>
+                            </div>
+                            <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
+                                <div class="text-white px-3 py-4 p-md-5 mx-md-4">
+                                    <h4 class="mb-4">Find and flip games in your city</h4>
+                                    <p class="small mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                                        do eiusmod
+                                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                        quis nostrud
+                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
