--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,8 +21,17 @@
                          alt="logo">
                 </a>
                 <div>
-                    <a class="btn btn-outline-primary mx-2" href="{{ path('app_login') }}">Log In</a>
-                    <a class="btn btn-primary fw-bold mx-2" href="{{ path('app_register') }}">Sign In</a>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <a class="btn btn-primary fw-bold mx-2" href="{{ path('app_admin_game_list') }}">Admin
+                            center</a>
+                    {% endif %}
+
+                    {% if is_granted('ROLE_USER') %}
+                        <a class="btn btn-outline-primary mx-2" href="{{ path('app_logout') }}">Log Out</a>
+                    {% else %}
+                        <a class="btn btn-outline-primary mx-2" href="{{ path('app_login') }}">Log In</a>
+                        <a class="btn btn-primary fw-bold mx-2" href="{{ path('app_register') }}">Sign In</a>
+                    {% endif %}
                 </div>
             </nav>
         </header>
