--- a/templates/game/game_details.html.twig
+++ b/templates/game/game_details.html.twig
@@ -22,7 +22,7 @@
             <h3 class="h3 my-2">{{ game.name }}</h3>
             <p>{% for category in game.categories %}<span class="badge rounded-pill my-1" style="background-color: {{ category.color }}">{{ category.name }}</span>&nbsp;{% endfor %}</p>
             <p class="game-details__info__description">{{ game.description }}</p>
-            <a class="btn btn-primary">Réserver</a>
+            <a class="btn btn-primary">Reserve</a>
         </div>
     </section>
 
