--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -14,7 +14,7 @@
 
 {% block body %}
 
-    <h3 class="mb-4">Jeux disponibles</h3>
+    <h3 class="mb-4">Games</h3>
     <div class="row gx-2 gy-2">
         {% for game in games %}
             <div class="col-xl-3 col-lg-4 col-md-6">
@@ -30,7 +30,7 @@
                     <div class="card-body">
                         <h5 class="card-title">{{ game.name }}</h5>
                         <p>{% for category in game.categories %}<span class="badge rounded-pill my-1" style="background-color: {{ category.color }}">{{ category.name }}</span>&nbsp;{% endfor %}</p>
-                        <a href="{{ path("app_game_details", {id: game.id}) }}" class="btn btn-primary">Details</a>
+                        <a href="{{ path("app_game_details", {id: game.id}) }}" class="btn btn-primary">More</a>
                     </div>
                 </div>
             </div>
