--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -30,7 +30,7 @@
                                              style="width: 185px;" alt="logo">
                                     </div>
 
-                                    <form action="{{ path('app_login') }}">
+                                    <form action="{{ path('app_login') }}" method="post">
                                         <p class="text-center fw-bold mb-4">Log in to your account</p>
 
                                         <div class="form-outline mb-4">
