--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,12 +9,12 @@
         <div class="container h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-lg-8 col-xl-6">
-                    <div class="card rounded-3">
+                    <div class="card rounded-3 align-items-center">
                         <img src="{{ asset('images/logo.svg') }}"
                              class="w-50" style="border-top-left-radius: .3rem; border-top-right-radius: .3rem;"
                              alt="Logo">
-                        <div class="card-body p-4 p-md-5">
-                            <h3 class="mb-4 pb-2 pb-md-0 mb-md-5 px-md-2">Sign In</h3>
+                        <div class="card-body">
+                            <h3 class="mb-4 pb-2 pb-md-0 mb-md-5 px-md-2 text-center">Sign In</h3>
 
                             {{ form_start(registrationForm) }}
 
@@ -27,21 +27,38 @@
 
                                 <div class="d-flex flex-row align-items-center mb-4">
                                     <i class="fas fa-circle-user fa-lg me-3 fa-fw"></i>
-                                    <div class="form-outline flex-fill mb-0">
-                                        {{ form_row(registrationForm.firstName, { 'attr' : { 'class' : 'form-control' } }) }}
-                                        {{ form_row(registrationForm.lastName, { 'attr' : { 'class' : 'form-control' } }) }}
+                                    <div class="row flex-fill">
+                                        <div class="col-md-6 col-sm-12">
+                                            {{ form_row(registrationForm.firstName, { 'attr' : { 'class' : 'form-control' } }) }}
+                                        </div>
+                                        <div class="col-md-6 col-sm-12">
+                                            {{ form_row(registrationForm.lastName, { 'attr' : { 'class' : 'form-control' } }) }}
+                                        </div>
                                     </div>
                                 </div>
 
-                                <div class="d-flex flex-row align-items-center mb-4">
+                            <div class="mb-3">
+                                <div class="d-flex flex-row align-items-center mb-2">
                                     <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                                    <div class="form-outline flex-fill mb-0">
-                                        {{ form_row(registrationForm.password.first, { 'attr' : { 'class' : 'form-control' } }) }}
-                                        {{ form_row(registrationForm.password.second, { 'attr' : { 'class' : 'form-control' } }) }}
+                                    <div class="row flex-fill">
+                                        <div class="col-md-6 col-sm-12">
+                                            {{ form_label(registrationForm.password.first) }}
+                                            {{ form_widget(registrationForm.password.first, { 'attr' : { 'class' : 'form-control' } }) }}
+                                        </div>
+                                        <div class="col-md-6 col-sm-12">
+                                            {{ form_label(registrationForm.password.second) }}
+                                            {{ form_widget(registrationForm.password.second, { 'attr' : { 'class' : 'form-control' } }) }}
+                                        </div>
                                     </div>
+                                    </div>
+                                <div class="px-5">
+                                    {{ form_errors(registrationForm.password.first) }}
+                                    {{ form_errors(registrationForm.password.second) }}
+                                </div>
                                 </div>
 
-                                <div class="form-check d-flex justify-content-center">
+
+                            <div class="form-check d-flex justify-content-center">
                                     {{ form_row(registrationForm.agreeTerms, { 'attr' : { 'class' : 'form-check-input me-2' } }) }}
                                 </div>
 
