--- a/templates/admin/admin_game/index.html.twig
+++ b/templates/admin/admin_game/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/admin_base.html.twig' %}
 
-{% block title %}Games{% endblock %}
+{% block title %}Game{% endblock %}
 
 {% block contenu %}
     <p class="h3">Games</p>
