--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,6 +27,7 @@
                     {% endif %}
 
                     {% if is_granted('ROLE_USER') %}
+                        <a class="btn btn-outline-primary mx-2" href="{{ path('app_profile', {'id': app.user.id}) }}">Profile</a>
                         <a class="btn btn-outline-primary mx-2" href="{{ path('app_logout') }}">Log Out</a>
                     {% else %}
                         <a class="btn btn-outline-primary mx-2" href="{{ path('app_login') }}">Log In</a>
