--- a/assets/styles/app_game.scss
+++ b/assets/styles/app_game.scss
@@ -10,6 +10,12 @@
     object-fit: cover;
   }
 
+  & .card-categories {
+    max-height: 80px;
+    overflow: hidden;
+    margin-bottom: 0;
+  }
+
   & .card-body{
     display: flex;
     flex-direction: column;
