--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Jeux disponibles{% endblock %}
+{% block title %}Games in your city{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
@@ -15,12 +15,21 @@
 {% block body %}
 
     <h3 class="mb-4">Games</h3>
-    <select class="form-select my-3" aria-label="City select" style="width: 200px" id="city-select">
-        {% for city in cities %}
-            <option value="{{ city.id }}"
-                    {% if selectedCity.id == city.id %}selected{% endif %}>{{ city.name }}</option>
-        {% endfor %}
-    </select>
+    <div class="d-flex flex-wrap align-items-center gap-4">
+        <select class="form-select my-3" aria-label="City select" style="width: 200px" id="city-select">
+            {% for city in cities %}
+                <option value="{{ city.id }}"
+                        {% if selectedCity.id == city.id %}selected{% endif %}>{{ city.name }}</option>
+            {% endfor %}
+        </select>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox"
+                   id="available-checkbox" {% if available == "true" %} checked {% endif %}>
+            <label class="form-check-label" for="available-checkbox">
+                Show only available games
+            </label>
+        </div>
+    </div>
     <div class="row gx-2 gy-2">
         {% for game in games %}
             <div class="col-xl-3 col-lg-4 col-md-6">
@@ -35,7 +44,10 @@
                          alt="Game image">
                     <div class="card-body">
                         <h5 class="card-title">{{ game.name }}</h5>
-                        <p>{% for category in game.categories %}<span class="badge rounded-pill my-1" style="background-color: {{ category.color }}">{{ category.name }}</span>&nbsp;{% endfor %}</p>
+                        <p class="card-categories">{% for category in game.categories %}<span
+                                class="badge rounded-pill my-1"
+                                style="background-color: {{ category.color }}">{{ category.name }}</span>&nbsp;{% endfor %}
+                        </p>
                         <a href="{{ path("app_game_details", {id: game.id}) }}" class="btn btn-primary">More</a>
                     </div>
                 </div>
