--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,8 +2,17 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}GameFlip{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+                integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+                crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+                integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+                crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+                integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+                crossorigin="anonymous"></script>
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
@@ -15,28 +24,93 @@
     <body>
     {% block header %}
         <header>
-            <nav class="navbar navbar-light bg-light px-3">
-                <a class="navbar-brand" href="{{ path('app_game_list') }}">
-                    <img src="{{ asset('images/logo.svg') }}" width="160" height="82" class="d-inline-block align-top"
-                         alt="logo">
-                </a>
-                <div>
-                    {% if is_granted('ROLE_ADMIN') %}
-                        <a class="btn btn-primary fw-bold mx-2" href="{{ path('app_admin_game_list') }}">Admin
-                            center</a>
-                    {% endif %}
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <img src="{{ asset('images/logo.svg') }}" width="160" height="82" class="d-inline-block align-top"
+                     alt="logo">
+                <button class="navbar-toggler m-3" type="button" data-toggle="collapse"
+                        data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0 text-center">
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <li class="nav-item active">
+                                <a class="btn btn-primary fw-bold mx-2" href="{{ path('app_admin_game_list') }}">Admin
+                                    center</a>
+                            </li>
+                        {% endif %}
 
-                    {% if is_granted('ROLE_USER') %}
-                        <a class="btn btn-outline-primary mx-2" href="{{ path('app_game_list') }}">Games</a>
-                        <a class="btn btn-outline-primary mx-2" href="{{ path('app_game_my_games') }}">My games</a>
-                        <a class="btn btn-outline-primary mx-2" href="{{ path('app_profile', {'id': app.user.id}) }}">Profile</a>
-                        <a class="btn btn-outline-primary mx-2" href="{{ path('app_logout') }}">Log Out</a>
-                    {% else %}
-                        <a class="btn btn-outline-primary mx-2" href="{{ path('app_login') }}">Log In</a>
-                        <a class="btn btn-primary fw-bold mx-2" href="{{ path('app_register') }}">Sign In</a>
-                    {% endif %}
+                        {% if is_granted('ROLE_USER') %}
+                            <li class="nav-item active">
+                                <a class="btn btn-outline-primary mx-2" href="{{ path('app_game_list') }}">Games</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="btn btn-outline-primary mx-2" href="{{ path('app_game_my_games') }}">My
+                                    games</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="btn btn-outline-primary mx-2"
+                                   href="{{ path('app_profile', {'id': app.user.id}) }}">Profile</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="btn btn-outline-primary mx-2" href="{{ path('app_logout') }}">Log Out</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item active">
+                                <a class="btn btn-outline-primary mx-2" href="{{ path('app_login') }}">Log In</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="btn btn-primary fw-bold mx-2" href="{{ path('app_register') }}">Sign In</a>
+                            </li>
+                        {% endif %}
+                    </ul>
                 </div>
             </nav>
+            {#            <nav class="navbar navbar-expand-lg navbar-light bg-light px-3"> #}
+            {#                <a class="navbar-brand" href="{{ path('app_game_list') }}"> #}
+            {#                    <img src="{{ asset('images/logo.svg') }}" width="160" height="82" class="d-inline-block align-top" #}
+            {#                         alt="logo"> #}
+            {#                </a> #}
+            {#                <div> #}
+            {#                    {% if is_granted('ROLE_ADMIN') %} #}
+            {#                        <a class="btn btn-primary fw-bold mx-2" href="{{ path('app_admin_game_list') }}">Admin #}
+            {#                            center</a> #}
+            {#                    {% endif %} #}
+
+            {#                    {% if is_granted('ROLE_USER') %} #}
+            {#                        <a class="btn btn-outline-primary mx-2" href="{{ path('app_game_list') }}">Games</a> #}
+            {#                        <a class="btn btn-outline-primary mx-2" href="{{ path('app_game_my_games') }}">My games</a> #}
+            {#                        <a class="btn btn-outline-primary mx-2" href="{{ path('app_profile', {'id': app.user.id}) }}">Profile</a> #}
+            {#                        <a class="btn btn-outline-primary mx-2" href="{{ path('app_logout') }}">Log Out</a> #}
+            {#                    {% else %} #}
+            {#                        <a class="btn btn-outline-primary mx-2" href="{{ path('app_login') }}">Log In</a> #}
+            {#                        <a class="btn btn-primary fw-bold mx-2" href="{{ path('app_register') }}">Sign In</a> #}
+            {#                    {% endif %} #}
+            {#                </div> #}
+            {#                <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" #}
+            {#                        aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"><span class="dark-blue-text"><i #}
+            {#                                class="fas fa-bars fa-1x"></i></span></button> #}
+
+            {#                <!-- Collapsible content --> #}
+            {#                <div class="collapse navbar-collapse" id="navbarSupportedContent1"> #}
+
+            {#                    <!-- Links --> #}
+            {#                    <ul class="navbar-nav mr-auto"> #}
+            {#                        <li class="nav-item active"> #}
+            {#                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> #}
+            {#                        </li> #}
+            {#                        <li class="nav-item"> #}
+            {#                            <a class="nav-link" href="#">Features</a> #}
+            {#                        </li> #}
+            {#                        <li class="nav-item"> #}
+            {#                            <a class="nav-link" href="#">Pricing</a> #}
+            {#                        </li> #}
+            {#                    </ul> #}
+            {#                    <!-- Links --> #}
+
+            {#                </div> #}
+            {#            </nav> #}
         </header>
     {% endblock %}
 
