--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
     <body>
     {% block header %}
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between px-4">
                 <img src="{{ asset('images/logo.svg') }}" width="160" height="82" class="d-inline-block align-top"
                      alt="logo">
                 <button class="navbar-toggler m-3" type="button" data-toggle="collapse"
@@ -51,7 +51,7 @@
                             </li>
                             <li class="nav-item active">
                                 <a class="btn btn-outline-primary mx-2"
-                                   href="{{ path('app_profile', {'id': app.user.id}) }}">Profile</a>
+                                   href="{{ path('app_profile') }}">Profile</a>
                             </li>
                             <li class="nav-item active">
                                 <a class="btn btn-outline-primary mx-2" href="{{ path('app_logout') }}">Log Out</a>
