Trade feature - save
Start implementation of the trade feature

--- a/templates/admin/admin_item/item_form.html.twig
+++ b/templates/admin/admin_item/item_form.html.twig
@@ -18,8 +18,10 @@
         <div class="col-4">
             {{ form_row(form.user) }}
         </div>
-
     </div>
+
+{#    <p class="h4">Trades</p>#}
+{#    {{ form_row(form.itemTrades) }}#}
 
     {% if app.request.get('_route') == "app_admin_item_add" %}
         <button type="submit" class="btn btn-success">Add</button>
